--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,16 @@
 {
 	"compilerOptions": {
-		"target": "es5",
+		"target": "es2015",
+		"lib": [ "es2019" ],
 		"module": "commonjs",
+		"strict": true,
+		"noUnusedLocals": true,
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
 		"declaration": true,
 		"outDir": "./lib",
-		"strict": true
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
 	},
 	"include": ["src"],
 	"exclude": ["node_modules", "**/__tests__/*"]
