--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "exchange-rates-bac-dollar",
   "version": "1.0.6",
   "description": "Exchange Rates from BAC bank",
-  "main": "lib/index.ts",
+  "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
