--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "exchange-rates-bac-dollar",
   "version": "1.0.11",
   "description": "Exchange Rates from BAC bank",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "author": "Luis Solorzano",
   "license": "Apache-2.0",
   "bugs": {
@@ -25,8 +25,10 @@
     "lint": "tslint -p tsconfig.json"
   },
   "dependencies": {
+    "@types/browserify": "^12.0.37",
     "aaxios": "^0.18.1",
     "axios": "^0.27.2",
+    "browserify": "^17.0.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
