--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,16 @@
 	"compilerOptions": {
 		"target": "es2015",
 		"module": "commonjs",
-		"outDir": "lib",
-		"downlevelIteration": true,
-		"esModuleInterop": true,
-
+		"declaration": true,
+		"outDir": "./lib",
 		"strict": true,
-		"noUnusedLocals": true,
-		"forceConsistentCasingInFileNames": true,
-	}
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"lib": [
+			"es2015",
+			"dom"
+		]
+	},
+	"include": ["src"],
+	"exclude": ["node_modules", "**/__tests__/*"]
 }
