--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,6 @@
 			"es2020",
 			"dom"
 		],
-		"sourceMap": true,
 		"experimentalDecorators": true,
 		"declaration": true,
 		"moduleResolution": "node",
@@ -18,6 +17,9 @@
 		"checkJs": false,
 		"noImplicitAny": false,
 	},
+	"include": [
+		"src/**/*"
+	],
 	"exclude": [
 		"node_modules",
 	]
