--- a/package.json
+++ b/package.json
@@ -25,15 +25,12 @@
     "lint": "tslint -p tsconfig.json"
   },
   "dependencies": {
-    "@types/browserify": "^12.0.37",
     "aaxios": "^0.18.1",
     "axios": "^0.27.2",
-    "browserify": "^17.0.0",
-    "xml2js": "^0.4.23"
+    "browserify": "^17.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
-    "@types/xml2js": "^0.4.11",
     "prettier": "^2.7.1",
     "ts-node": "^10.8.1",
     "tslint": "^6.1.3",
