--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "lint": "tslint -p tsconfig.json"
   },
   "dependencies": {
-    "aaxios": "^0.18.1",
-    "axios": "^0.27.2",
-    "browserify": "^17.0.0"
+    "axios": "^0.27.2"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
