--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "exchange-rates-bac-dollar",
-  "version": "1.0.19",
+  "version": "1.0.20",
   "description": "Exchange Rates from BAC bank",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -36,6 +36,6 @@
     "typescript": "^4.7.4"
   },
   "files": [
-    "lib/**/*"
+    "dist/**/*"
   ]
 }
