--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
 	"exclude": ["node_modules"],
 	"compilerOptions": {
 		"declaration": true,
-		"declarationDir": "declarations",
+		"types": ["node"],
+		//"declarationDir": "declarations",
 		"allowJs": true,
 		"checkJs": true,
 		"outDir": "dist",
